src/stylus/main.styl
$black = #000
$grey = #6f7480
$warm-grey = #8c8c8c
$blue = #1c69d4
$white = #fefefe

$font = 'ApercuPro'
$opensans = 'Open Sans'
$bold = 'Apercu Pro'

@font-face
   font-family Apercu Pro
   font-style regular
   src url(../fonts/ApercuPro.otf)

@font-face
   font-family Apercu Pro
   font-style bold
   src url(../fonts/ApercuPro-Bold.ttf)


/***** Basic *****/

*
  padding 0
  margin 0
  -webkit-box-sizing border-box
  box-sizing border-box
  &:before, &:after
    padding 0
    margin 0
    -webkit-box-sizing border-box
    box-sizing border-box
html
  width 100%
  height 100%
  overflow-x hidden
body
  width 100%
  height 100%
  overflow-x hidden
  background-color $black
  font-family $font, $opensans, sans-serif
  color warm-grey
ol, ul
  list-style none
a
  text-decoration none
  color $blue
h1
  margin 1em 0
  font-size 2rem

h2
  font-size 1.6rem
  color $grey

.surtitre
  font-size 1rem
  color $blue
  font-family $bold

/***** Progressive ******/

#progressive
  background $black


/***** Sports car ****/

#sports-car
  background $white
  span
    color $grey


/**** 3 sections *****/

#sections
  background-color $black
  div
    color $white
    padding 1rem 2rem
    width 100%
    height 15rem
    h1
      font-family $font
      font-weight 300
      font-size 1.6rem
      opacity 1
      transition all 0.6s ease-in-out
    p
      color $grey
      font-size 0.9rem
      padding-right 3rem
      opacity 1
      transition all 1s ease-in-out
  .nav.nav-sections
    display flex
    flex-direction column
    text-align right
    line-height 2rem
    margin-right 2rem
    a
      color $grey
      transition all 0.3s ease-in-out
      overflow hidden
      &:after
        content: "";
        display: inline-block;
        height: 1em;
        vertical-align: bottom;
        width: 100%;
        margin-right: -97%;
        margin-left: 10px;
        border-top: 1px solid $grey
        transition all 0.3s ease-in-out
    .active
      color $white
      &:after
        border-top 1px solid $white
        margin-right -92%

  #sections-background
    width 100%
    position absolute
    bottom 0rem
    background-size contain
    background-repeat no-repeat
    background-position left bottom
    transition all 0.4s ease-in-out
    background-image url(../images/slider-1.png)


/***** End 3 section ****/

/**** Technical ****/

#technical
  background $white
  span
    color $blue

/**** End Technical ****/

/**** Impulse ****/

#impulse
  background $black

/**** end impulse ****/


/**** BMW series ****/

#BMWseries
  background $white
  span
    color $black

/**** end bmw series ****/


/**** find your car ****/

#findcar
  background $white
  span
    color $black

/**** end find your car ****/

/**** experience ****/

#experience
  background $black
  span
    color $blue

/**** end experience ****/

/**** Mobile Bar ****/
.menu-toggle
  display none
.mobile-bar
  z-index 10
  position fixed
  top 0
  left 0
  padding 0 25px
  width 100%
  height 100px
  color $white
  background-color $black
  li
    display inline-block
    margin-right 6%
    margin-top 25px
    vertical-align middle
  .mobile-title
    font-size 2rem
    a
      color $white

@media (max-width: 940px)
  .mobile-bar
    height 80px
  .header
    background-color $black !important
    z-index 3
    .main-nav
      flex-direction column
      align-items stretch
    .BMW-li-logo
      height 80px
    ul li
      text-align left
      font-size 1.5rem
      border-top 1px rgba(254, 254, 254, 0.2) solid
      color $white
      a
        padding 3rem
        font-size 1.6rem
        color $white
        background-color transparent
      .BMW-logo
        padding 35px


/**** Menu Icon ****/
.menu-icon
  display block
  right 30px
  top 50px
  position fixed
  width 30px
  height 0%
  cursor pointer
  -webkit-transition -webkit-transform 300ms ease-in
  transition -webkit-transform 300ms ease-in
  transition transform 300ms ease-in
  transition transform 300ms ease-in, -webkit-transform 300ms ease-in
  >span
    display block
    position absolute
    top 55%
    margin-top -0.3em
    width 100%
    height 0.2em
    background-color $white
    -webkit-transition -webkit-transform 300ms ease-in
    transition -webkit-transform 300ms ease-in
    transition transform 300ms ease-in
    transition transform 300ms ease-in, -webkit-transform 300ms ease-in
    &:before, &:after
      content ""
      position absolute
      width 100%
      height 100%
      background-color $white
      -webkit-transition: -webkit-transform 300ms ease
      transition -webkit-transform 300ms ease
      transition transform 300ms ease
      transition transform 300ms ease, -webkit-transform 300ms ease
    &:before
      -webkit-transform: translateY(-0.6em)
      transform translateY(-0.6em)
    &:after
      -webkit-transform: translateY(0.6em)
      transform translateY(0.6em)

/**** Menu Icon Effects ****/
.menu-toggle:checked
  +.mobile-bar
    .menu-icon
      -webkit-transform rotate(45deg)
      transform rotate(45deg)
    span
      &:before, &:after
        -webkit-transform rotate(90deg)
        transform rotate(90deg)
  ~ .header
    visibility visible
    opacity 1
    -webkit-transition-delay 0s
    transition-delay 0s


/***** Header ****/
.header
  visibility hidden
  opacity 0
  position fixed
  width 100%
  height 100%
  background-color $white
  overflow-y scroll
  text-align center
  color $warm-grey
  -webkit-transition opacity 300ms ease-in, visibility 0s ease-in 300ms
  transition opacity 300ms ease-in, visibility 0s ease-in 300ms
  a
    display block
    font-size 0.9rem
    padding 1rem
    -webkit-transition color 300ms ease-in
    transition color 300ms ease-in
    &:hover
      color $blue
  .active
    color $blue
  .non
    background $black !important


/**** Container ****/
.container
  padding 0rem
  height 100%


/**** Footer ****/
.footer
  font-size 0.9em
  text-align center
  a
    color $blue
    transition all 0.4s ease
    &:hover
      text-decoration underline

@media (min-width: 940px)
  .mobile-bar
    display none
  .header
    z-index 5
    width 100%
    height auto
    overflow auto
    visibility visible
    opacity 1
    .logo
      display flex
      justify-content flex-start
      align-items center
      flex 1
      a
        padding 15px 20px
    .item
      flex 1
      justify-content flex-end
      flex-basis 70%
    ul
      display flex
      flex-wrap wrap

    li
      display inline-block
      border none
    img
      vertical-align middle
      display inline-block
    a
      display block
      text-align center
      color $grey
      vertical-align middle
    .main-nav
      display flex
      padding 0rem 10rem
      align-items center


      */
  .container
    margin-top 0



/***** SLIDES *****/

body
  &.slider__body
    margin 0
    padding 0
    overflow hidden

.slider__container
  position relative
  display block
  height 100%
  width 100%
  margin 0
  padding 0

.slider__container section>span
    position absolute
    top 30%
    left 15%
    font-size 5vw
    color $white

.slider__container section
    position relative
    width 100%
    height 100%

